Refactor: Applied Creational, Structural, and Behavioral patterns to RootUser